# agents-pokemon

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  spec.md
dashboard/: README.md  index.html  package-lock.json  package.json  playwright.config.ts
dashboard/src/: App.css  (+2 more)
docs/: agent-mental-model.html  autonomous-agent-roadmap.md  early-game-elm-lab-proposal.md  future-headed-optimizations.md  house-exit-autonomy-analysis.md  memory-analysis.md  watch-ui-ideas.md
scripts/: diagnose_mom_scene.py  verify_goal_closure.sh  verify_house_exit_state.py  wire_landmark_navigation.py
src/: __init__.py
tests/: conftest.py  fake_emulator.py  test_bootstrap.py  test_cli.py  test_coords_playable.py  test_dashboard_server.py  test_dev_starts.py  test_doc_headed_profile.py  test_early_progression.py  test_early_progression_phase.py  test_evaluators.py  test_event_flags.py  test_first_gym_hold_matrix.py  test_generic_interact.py  test_gold_state_reader.py  test_graph_build.py  test_graph_integration.py  test_graph_nodes.py  test_headed_profile.py  test_house_exit.py  test_house_exit_phase.py  test_house_exit_terminal.py  test_intent_card.py  test_landmarks.py  test_langsmith_tracing.py  test_llm.py  test_memory.py  test_memory_highroi.py  test_nav_thrash.py  test_pathfinding.py  test_post_exit_replan.py  test_quest_geography.py  test_rom_house_exit.py  test_rom_starter_quest.py  test_route29_ledge_and_corridor_seed.py  test_script_wait.py  test_starter_milestones.py  test_starter_quest_phase.py  test_starter_quest_progression.py  test_stuck_fixes.py  (+2 more)
(+52 files in other folders)
